overflow is fixed in scholarships - bachelor, master and php.blade.php

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1106,10 +1106,10 @@ body{
 
 /*Bachelor Css*/
 .first-paragraph{
-    left: 200px;
+    left: 150px;
 }
 .second-paragraph{
-    left: 200px;
+    left: 140px;
 }
 #firstscholarpar{
     display: block;
